# TP_OpenMP

./: .gitignore  CMakeLists.txt  README.md  data_collection.py
results/: README.md  results.ods  results_char.csv
results/grid5000/: results_num.csv  results_vect.csv
results/local/: results_char.csv  results_num.csv  results_vect.csv
src/: Algorithms.cpp  Algorithms.h  Timer.cpp  Timer.h  Utils.h  charMatrix.cpp  numberMatrix.cpp  numberVector.cpp  vector.cpp
